sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:5: error: not found: value getValeur
    var v=getValeur(i)
          ^DutchFlagAlgo:7: error: not found: value getValeur
    while (j>0 && getValeur(j-1)>v){
                  ^DutchFlagAlgo:8: error: not found: value setValeur
      setValeur(j,getValeur(j-1))
      ^DutchFlagAlgo:8: error: not found: value getValeur
      setValeur(j,getValeur(j-1))
                  ^DutchFlagAlgo:11: error: not found: value setValeur
    setValeur(j,v)
    ^